packages/react/src/Card/Card.module.css
.Card {
  max-width: var(--brand-Card-maxWidth);
  text-decoration: none;
  color: var(--brand-color-text-default);
  border-radius: var(--brand-borderRadius-large);
  transition: transform var(--brand-Card-animation-duration) var(--brand-Card-animation-easing);
  padding: var(--base-size-32);
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    'image image'
    'icon icon'
    'label label'
    'heading heading'
    'description description'
    'action action';
  flex: auto;
  grid-template-rows: auto auto auto auto 1fr;
  position: relative;
  height: 100%;
}

.Card--fullWidth {
  max-width: unset;
}

.Card--variant-minimal {
  padding: 0;
}

.Card--colorMode-light {
  background-color: var(--brand-Card-background-default);
}

.Card:focus-within {
  outline: var(--brand-borderWidth-thick) solid var(--brand-color-focus);
}

.Card--variant-minimal:focus-within {
  outline-offset: var(--base-size-16);
}

.Card:hover {
  text-decoration: none;
}

.Card__link {
  color: currentColor;
  text-decoration: none !important;
}

.Card--disableAnimation:hover .Card__link {
  text-decoration: underline !important;
}

/* The focus outline will appear around the entire card, not just the title */
.Card__link:focus {
  outline: none;
}

.Card__link::before {
  content: '';
  position: absolute;
  inset: 0;
}

.Card--border {
  border: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
}

.Card__outer {
  height: 100%;
}

.Card--icon {
  grid-template-areas:
    'image image'
    'icon label'
    'heading heading'
    'description description'
    'action action';
}

.Card--icon .Card__label {
  justify-self: flex-end;
}

.Card--icon .Card__label,
.Card--icon .Card__icon {
  align-self: center;
}

.Card:not(.Card--disableAnimation, .Card--variant-default.Card--colorMode-dark):hover {
  transform: scale3d(1.025, 1.025, 1);
}

.Card__image {
  margin-bottom: var(--base-size-28);
  border-radius: var(--brand-borderRadius-medium);
  overflow: hidden;
  grid-area: image;
}

.Card__image img,
.Card__image span {
  display: block;
}

.Card__icon {
  margin-bottom: var(--base-size-16);
  grid-area: icon;
}

.Card__icon--badge {
  width: var(--base-size-44);
  height: var(--base-size-44);
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.Card__label {
  margin-bottom: var(--base-size-16);
  grid-area: label;
}

.Card__heading {
  margin-bottom: var(--base-size-20);
  grid-area: heading;
}

.Card__description {
  margin-bottom: var(--base-size-32);
  grid-area: description;
}

.Card__action {
  grid-area: action;
  margin-top: auto;
  display: inline-flex;
  align-items: center;
}

.Card__action,
.Card__action span {
  color: var(--brand-Link-color-accent);
}

.Card__icon svg {
  width: var(--base-size-20);
  height: var(--base-size-20);
}

.Card__icon--color-default {
  color: var(--brand-Card-icon-color-default);
}

.Card__icon--color-default.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-default);
}

.Card__icon--color-blue {
  color: var(--brand-Card-icon-color-blue);
}

.Card__icon--color-blue.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-blue);
}

.Card__icon--color-coral {
  color: var(--brand-Card-icon-color-coral);
}

.Card__icon--color-coral.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-coral);
}

.Card__icon--color-green {
  color: var(--brand-Card-icon-color-green);
}

.Card__icon--color-green.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-green);
}

.Card__icon--color-gray {
  color: var(--brand-Card-icon-color-gray);
}

.Card__icon--color-gray.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-gray);
}

.Card__icon--color-indigo {
  color: var(--brand-Card-icon-color-indigo);
}

.Card__icon--color-indigo.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-indigo);
}

.Card__icon--color-lemon {
  color: var(--brand-Card-icon-color-lemon);
}

.Card__icon--color-lemon.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-lemon);
}

.Card__icon--color-lime {
  color: var(--brand-Label-color-lime);
}

.Card__icon--color-lime.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-lime);
}

.Card__icon--color-orange {
  color: var(--brand-Card-icon-color-orange);
}

.Card__icon--color-orange.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-orange);
}

.Card__icon--color-pink {
  color: var(--brand-Card-icon-color-pink);
}

.Card__icon--color-pink.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-pink);
}

.Card__icon--color-purple {
  color: var(--brand-Card-icon-color-purple);
}

.Card__icon--color-purple.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-purple);
}

.Card__icon--color-red {
  color: var(--brand-Card-icon-color-red);
}

.Card__icon--color-red.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-red);
}

.Card__icon--color-teal {
  color: var(--brand-Card-icon-color-teal);
}

.Card__icon--color-teal.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-teal);
}

.Card__icon--color-yellow {
  color: var(--brand-Card-icon-color-yellow);
}

.Card__icon--color-yellow.Card__icon--badge {
  background-color: var(--brand-Card-icon-background-yellow);
}

.Card--skew {
  height: 100%;
  overflow: hidden;
  border-radius: var(--brand-borderRadius-large);
}

.Card--skew:hover .Card__torch {
  opacity: 0.85;
}

.Card__skew-bounding {
  border: var(--brand-borderWidth-thin) solid var(--brand-color-border-default);
  border-radius: var(--brand-borderRadius-large);
  position: relative;
  z-index: 1;
  height: 100%;
  background-color: var(--brand-Card-background-default);
}

.Card__torch {
  width: 650px;
  height: 650px;
  background-color: var(--brand-color-accent-primary);
  filter: blur(180px);
  border-radius: 300px;
  opacity: 0;
  transition: opacity 1.2s cubic-bezier(0.16, 1, 0.3, 1);
  mix-blend-mode: soft-light;
  will-change: transform;
  pointer-events: none;
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: -1;
}

